--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "korsun-online",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "svelte-kit dev",
+		"dev": "env-cmd svelte-kit dev",
 		"build": "svelte-kit build",
 		"package": "svelte-kit package",
 		"preview": "svelte-kit preview",
@@ -13,17 +13,25 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
+		"@tailwindcss/typography": "^0.5.2",
+		"autoprefixer": "^10.4.2",
+		"daisyui": "^2.13.2",
+		"env-cmd": "^10.1.0",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
+		"graphql": "^16.3.0",
+		"graphql-request": "^4.2.0",
+		"postcss": "^8.4.5",
+		"postcss-load-config": "^3.1.1",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
 		"svelte": "^3.44.0",
-		"postcss": "^8.4.5",
-		"postcss-load-config": "^3.1.1",
 		"svelte-preprocess": "^4.10.1",
-		"autoprefixer": "^10.4.2",
 		"tailwindcss": "^3.0.12"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"date-fns": "^2.28.0"
+	}
 }
